python plus rev

--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.0 64-bit"
+   "display_name": "Python 3.9.0 64-bit (system)"
   },
   "interpreter": {
    "hash": "43a9cd95aa030499ef934e4da31e07dde54f3fc3a1fd0cc4aeef7f16459ee2ac"
@@ -863,8 +863,8 @@
    "cell_type": "code",
    "execution_count": 14,
    "source": [
-    "number_list=[1, 2, 3, 4, 5]\n",
-    "result= list(map(lambda x: x**2, number_list))\n",
+    "number_list=[1, 2, 3, 4, 5]\r\n",
+    "result= list(map(lambda x: x**2, number_list))\r\n",
     "print(result)"
    ],
    "outputs": [
@@ -882,8 +882,8 @@
    "cell_type": "code",
    "execution_count": 16,
    "source": [
-    "number_list=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "result= list(filter(lambda x : True if x%2 != 0 else False, number_list))\n",
+    "number_list=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\r\n",
+    "result= list(filter(lambda x : True if x%2 != 0 else False, number_list))\r\n",
     "print(result)"
    ],
    "outputs": [
@@ -901,9 +901,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "source": [
-    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\n",
-    "result_1 = ((lambda x : x[2])(list_1))\n",
-    "result_2 = len(result_1)\n",
+    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\r\n",
+    "result_1 = ((lambda x : x[2])(list_1))\r\n",
+    "result_2 = len(result_1)\r\n",
     "print([result_1, result_2])"
    ],
    "outputs": [
@@ -921,9 +921,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "source": [
-    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\n",
-    "#result_1 = ((lambda x : max(x, key=len(x)))(list_1))\n",
-    "#result_2 = len(result_1)\n",
+    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\r\n",
+    "#result_1 = ((lambda x : max(x, key=len(x)))(list_1))\r\n",
+    "#result_2 = len(result_1)\r\n",
     "print(max(list_1, key=len))"
    ],
    "outputs": [
@@ -941,10 +941,10 @@
    "cell_type": "code",
    "execution_count": 42,
    "source": [
-    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\n",
-    "result_1 = ((lambda x : max(x, key=len) )(list_1))\n",
-    "result_2 = len(result_1)\n",
-    "result_3 = (result_1, result_2)\n",
+    "list_1 = [['C', 'L'], ['A', 'R', 'U'], ['S', 'W', 'A', 'Y']]\r\n",
+    "result_1 = ((lambda x : max(x, key=len) )(list_1))\r\n",
+    "result_2 = len(result_1)\r\n",
+    "result_3 = (result_1, result_2)\r\n",
     "print(result_3)"
    ],
    "outputs": [
