--- a/Hand On.ipynb
+++ b/Hand On.ipynb
@@ -1868,17 +1868,17 @@
    "cell_type": "code",
    "execution_count": 47,
    "source": [
-    "n = 3\n",
-    "comb = ['()']\n",
-    "c = 1\n",
-    "while c < n:\n",
-    "    temp = []\n",
-    "    for i in comb:\n",
-    "        for j in range(len(i)):\n",
-    "            temp.append(i[:j] + '()' + i[j:])\n",
-    "    # use the set function when n = 3\n",
-    "    comb = list(set(temp))\n",
-    "    c += 1\n",
+    "n = 3\r\n",
+    "comb = ['()']\r\n",
+    "c = 1\r\n",
+    "while c < n:\r\n",
+    "    temp = []\r\n",
+    "    for i in comb:\r\n",
+    "        for j in range(len(i)):\r\n",
+    "            temp.append(i[:j] + '()' + i[j:])\r\n",
+    "    # use the set function when n = 3\r\n",
+    "    comb = list(set(temp))\r\n",
+    "    c += 1\r\n",
     "comb if n!=0 else [\"\"]"
    ],
    "outputs": [
